--- a/styles/admin.css
+++ b/styles/admin.css
@@ -7,76 +7,240 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    background-color: #818181;
 }
 
-form {
-    padding: 40px;
-    margin: 60px auto 0;
-    width: fit-content;
-    background-color: #3f3d3d;
-    color: #b4b2b2;
+/* LOGIN  */
+
+.login {
+    display: flex;
+    flex-direction: column;
+    background-color: #fffbfb;
+    width: 90vw;
+    margin: 20vh auto;
+    padding: 30px 15px 15px;
+    border-radius: 3px;
+    border: 1px solid grey;
 }
 
-form > * {
+.login > * {
     display: block;
-    font-size: 1.2rem;
 }
 
-form > p {
-    font-size: 2rem;
-    color: #d7d5d5;
-    text-align: center;
+.login label {
+    font-weight: 600;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    margin-bottom: 8px;
 }
 
-.subtitle {
-    text-transform: uppercase;
-    color: #cecdcd;
+.login input {
+    height: 30px;
     margin-bottom: 20px;
 }
 
-input {
-    border: none;
-    user-focus: none;
-    border-bottom: solid rgb(143, 143, 143) 1px;
-    margin-bottom: 30px;
-    background: none;
-    color: rgba(255, 255, 255, 0.555);
-    height: 35px;
-    width: 300px;
-}
-
-textarea {
-    margin-bottom: 30px;
-}
-
-.submit-btn {
-    background-color:#0a0a23;
-    color: #cecdcd;
+.login button {
+    color: white;
+    background-color: rgb(20, 16, 16);
     font-size: 1rem;
+    font-weight: 600;
+    height: 30px;
+    border: none;
+}
+
+.customForm {
+    margin: 10vh auto;
+    padding: 30px 15px;
+    width: 90vw;
+    background-color: #e6e6e6;
+    color: #000000;
+    border: 2px solid grey;
+}
+
+.customForm > * {
+    display: block;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.customForm h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 20px 0 30px;
+}
+
+.customForm input {
+    border: none;
+    border-bottom: solid rgb(143, 143, 143) 1px;
+    width: 100%;
+    margin-bottom: 20px;
+    background: none;
+    color: rgba(0, 0, 0, 0.555);
+    height: 35px;
+}
+
+.customForm button {
+    background-color:#0a0a23;
+    color: #f5f5f5;
+    font-size: 1rem;
+    letter-spacing: 2px;
     padding: 5px 20px;
+    border-radius: 2px;
+}
+
+.customForm a, .admins-list a {
+    display: block;
+    float: right;
+    color: black;
+    text-decoration: none;
 }
 
 .events-admin {
     background-color: #d7d5d5;
-    width: 70%;
-    margin: 20px auto;
-    padding: 40px;
+    width: 90%;
+    margin: 5vh auto;
+    padding: 30px 10px;
 }
 
 .events-admin h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    text-align: center;
 }
 
-.events-admin a {
+.events-admin-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0 30px;
+}
+
+.events-admin-btn a {
     display: block;
+    background-color: #606c7d;
+    color: whitesmoke;
+    font-size: 0.8rem;
     text-decoration: none;
-    text-transform: uppercase;
+    letter-spacing: 2px;
     width: fit-content;
-    padding: 5px 20px;
-    margin: 15px 0;
-    color: black;
+    padding: 5px 10px;
+}
+
+.events-admin-btn a:last-child {
+    margin-top: 20px;
+    background-color: rgb(145, 77, 77);
+}
+
+.event-row {
+    display: flex;
+    font-weight: 600;
+    gap: 1.5em;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.event-row button, .admins-list button {
+    background-color: rgb(99, 23, 23);
+    color: whitesmoke;
+    padding: 5px;
+}
+
+.admins-list {
+    background-color: whitesmoke;
+    padding: 2em 3em;
+    margin: 20vh auto;
+    width: fit-content;
+    border-radius: 2px;
     border: 2px solid grey;
+}
+
+.admins-list h2 {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+.admins-list div {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.alert {
+    color: rgb(122, 21, 21);
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+@media only screen and (min-width:500px) {
+
+    .customForm {
+        width: 80vw;
+        padding: 30px 40px;
+    }
+
+    .events-admin {
+        padding: 30px;
+    }
+
+    .events-admin-btn {
+        flex-direction: row;
+        gap: 30px;
+    }
+
+    .events-admin-btn a {
+        font-size: 1rem;
+    }
+
+    .events-admin-btn a:last-child {
+        margin-top: 0;
+    }
+
+    .admins-list h2 {
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen and (min-width:700px) {
+
+    .customForm {
+        width: 60vw;
+    }
+}
+
+@media only screen and (min-width:1000px) {
+
+    body {
+        background-image: url("../images/koncert.png");
+        background-repeat: repeat-y;
+        background-size: 100% auto;
+    }
+
+    .login {
+        padding: 3rem;
+        width: 40vw;
+    }
+
+    .customForm {
+        width: 40vw;
+    }
+
+    .events-admin {
+        width: 70vw;
+    }
+
+    .events-admin h2 {
+        font-size: 2.5rem;
+    }
+
+    .events-admin-btn {
+        justify-content: flex-start;
+        gap: 20px;
+    }
+
+    .admins-list {
+        padding: 3em 5em;
+    }
 }
