--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ section img {
 }
 
 
-.stars {
+#stars {
     position: absolute;
     top: 0;
     left: 0;
@@ -61,20 +61,20 @@ section img {
 }
 
 
-.venus {
+#venus {
     position: absolute;
     top: 0;
     left: 0;
 }
 
-.mountain {
+#mountain {
     position: absolute;
     top: 0;
     left: 0;
     filter: brightness(80%);
 }
 
-.road {
+#road {
     position: absolute;
     top: 0;
     left: 0;
@@ -83,173 +83,162 @@ section img {
     filter: brightness(70%);
 }
 
-.lod {
+#boat {
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 500px;
+    width: 140px;
+    height: 340px;
     z-index: 1;
 }
 
 #text {
     position: relative;
     color: #ffffffcf;
-    font-size: 10rem;
+    font-size: 18vw;
     text-transform: uppercase;
     z-index: 1;
 }
 
+
+/*  NAVIGATION   */
+
 .navDiv {
-    height: 150px;
-    position: relative;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
 }
 
+.navMenu-icon {
+    display: block;
+    align-self: flex-end;
+    width: 2.5rem;
+    aspect-ratio: 1 / 1;
+    margin: 10px;
+}
 
 .navMenu {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    display: none;
+}
+
+.navDiv-open {
+    background-color: #090909;
+    gap: 20%;
+    width: 100vw;
+    height: 100vh;
+    z-index: 200000;
+}
+
+.navMenu-open {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 .navMenu a {
-    color: #f6f4e6;
+    display: block;
+    color: #d7d7d7;
     text-align: center;
     text-decoration: none;
-    font-size: 1.5em;
+    font-size: 1.8rem;
     text-transform: uppercase;
     font-weight: 500;
-    display: inline-block;
-    width: 100px;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-
-.navMenu a:hover, .navMenu a:active {
-    color: #FFA500;
+    height: fit-content;
 }
 
 .navMenu .dot {
-    width: 6px;
-    height: 6px;
-    background: #FFA500;
-    border-radius: 50%;
-    opacity: 0;
-    -webkit-transform: translateX(30px);
-    transform: translateX(30px);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
+    display: none;
 }
 
-.navMenu a:nth-child(1):hover ~ .dot {
-    -webkit-transform: translateX(50px);
-    transform: translateX(50px);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    opacity: 1;
-}
-
-.navMenu a:nth-child(2):hover ~ .dot {
-    -webkit-transform: translateX(150px);
-    transform: translateX(150px);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    opacity: 1;
-}
-
-.navMenu a:nth-child(3):hover ~ .dot {
-    -webkit-transform: translateX(255px);
-    transform: translateX(255px);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    opacity: 1;
-}
-
-.navMenu a:nth-child(4):hover ~ .dot {
-    -webkit-transform: translateX(365px);
-    transform: translateX(365px);
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    opacity: 1;
-}
+/* EVENTS POPUP */
 
 #previousEvents {
     display: none;
 }
 
 .events-buttons {
-    display: flex;
-    gap: 3rem;
-    margin: 0 auto;
-    padding: 0 15px 20px;
+    margin-bottom: 30px;
 }
 
 .events-buttons p {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: 500;
+    padding: 10px;
     text-transform: uppercase;
     cursor: pointer;
 }
 
-.events-buttons p:hover {
+.events-info p {
+    text-align: center;
+    font-weight: 500;
+    margin-top: 30px;
+}
+
+.events-info p span {
     color: orange;
 }
 
-.events-list {
-    text-align: center;
-    padding: 10px 10px;
+.events-none {
+    width: 100%;
+    height: 70vh;
+    padding: 1em;
 }
 
-.events-none img {
+.events-none-img {
+    position: relative;
     display: block;
-    width: 50%;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     filter: grayscale(100%);
-    border-radius: 3px;
+    border-radius: 2px;
 }
 
-.events-none p {
-    font-size: 1.2rem;
+.events-none-text {
+    font-size: 0.8rem;
+    width: 90%;
+    padding: 1em 2em;
     text-align: center;
     position: absolute;
-    padding: 2em;
-    width: 70%;
-    top: 60%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: orange;
     background-color: rgba(0, 0, 0, 0.91);
+    border: 1px solid rgb(56, 56, 56);
 }
+
+/* ABOUT  */
 
 .about {
     position: relative;
-    margin: 100px 5rem 200px;
+    margin: 30% 0 10%;
 }
 
 .about-photo {
-    width: 65%;
-    height: auto;
+    width: 100%;
 }
 
 .about-box {
-    position: absolute;
-    bottom: 70px;
-    right: 0;
-    background-color: rgba(17, 17, 17, 0.94);
-    width: 50%;
-    padding: 3em;
-    border-left: 5px solid #8c5605;
+    background-color: transparent;
+    padding: 2.5em;
 }
 
-.about-box-text {
-    font-size: 1.2rem;
+.about-box-text, .music-review {
+    font-size: 1rem;
     color: rgba(255, 255, 255, 0.85);
     line-height: 1.5em;
+    text-align: justify;
 }
 
 .about-box-text span {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 2px;
@@ -258,59 +247,57 @@ section img {
 }
 
 .about-box-text a {
-    color: #8c5605;
+    color: rgb(207, 153, 51);
     text-decoration: none;
 }
 
 .music {
-    margin-bottom: 200px;
+    margin-bottom: 150px;
 }
 
-.info-href {
+.info-icon {
+    display: block;
     display: flex;
 }
 
 .info-img {
-    width: 30px;
+    width: 25px;
     height: auto;
-    margin: 0 20px 20px auto;
+    margin: 0 15px 15px auto;
 }
 
-.overlay-events, .overlay-music {
+.events-overlay, .music-overlay {
     position: fixed;
     width: 100vw;
-    height: 100ch;
+    height: 100vh;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.806);
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
     z-index: 6;
 }
-.overlay-events:target, .overlay-music:target {
-    visibility: visible;
-    opacity: 1;
+
+.events-popup, .music-popup {
+    height: 100%;
+    width: 100%;
+    padding: 4em 2em 2em;
+    background: #090909;
+    border-radius: 3px;
+    overflow-y: scroll;
+    position: relative;
 }
 
-.popup-events, .popup-music {
+.music-popup {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 5vh auto 0;
-    padding: 50px 30px;
-    background: #090909;
-    border-radius: 3px;
-    width: 60%;
-    height: 90vh;
-    overflow-y: scroll;
-    position: relative;
-    transition: all 5s ease-in-out;
 }
 
-.popup-events .close, .popup-music .close {
+.events-close, .music-close {
     position: absolute;
     top: 20px;
     right: 30px;
@@ -318,66 +305,76 @@ section img {
     font-size: 40px;
     font-weight: bold;
     text-decoration: none;
-    color: #333;
+    color: #474747;
 }
-.popup-events .close:hover, .popup-music .close:hover {
+.events-close:hover, .music-close:hover {
     color: #FFA500;
 }
 
-.popup-music h3 {
+.music-popup h3 {
     width: 100%;
     flex: 0 0 100%;
     text-align: center;
     font-weight: 300;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 40px;
 }
 
-.popup-music p {
+.music-popup p {
     width: 100%;
     flex: 0 0 100%;
+    font-size: 0.9rem;
     text-align: center;
     line-height: 2em;
+    padding: 0 2em;
     margin-top: 40px;
 }
 
-.popup-music img {
-    width: 50%;
-    brightness(80%);
+.music-popup img {
+    width: 60%;
+    filter: brightness(80%);
 }
-.popup-music ol {
+.music-popup ol {
     list-style: none;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
-.popup-music ol li {
+.music-popup ol li {
+    font-size: 0.9rem;
     margin-bottom: 1rem;
     letter-spacing: 2px;
 }
 
-.popup-music ol li span{
+.music-popup ol li span{
    color: #8c5605;
 }
 
+/*  MUSIC SLIDE  */
+
 .music-slide {
-    display: flex;
+    display: block;
     background-color: rgba(16, 16, 16, 0.95);
     box-shadow: 0 0 7px 2px rgba(101, 101, 101, 0.75);
 }
 
 .music-slide-img {
     display: block;
-    width: 40%;
-    filter: brightness(60%);
+    width: 100%;
+    filter: brightness(70%);
 }
 
 .music-slide-player {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
     align-items: center;
     width: 100%;
-    padding: 10px 40px;
+    padding: 20px 30px;
     box-shadow: inset 0 0 167px -57px rgb(0, 0, 0);
+}
+
+.music-slide-player_title {
+    margin-bottom: 10px;
 }
 
 .music-slide-player_buttons button {
@@ -391,16 +388,12 @@ section img {
 
 .music-slide-player_buttons img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
+
 
 .music-slide-player_timebar progress {
     accent-color: #8c5605;
-}
-
-.music-slide-player_title {
-    font-weight: 600;
-    flex: 0 0 15em;
 }
 
 .music-slide-player div {
@@ -411,25 +404,49 @@ section img {
 
 #music-album_name {
     text-align: right;
-    padding: 10px 60px 0 0;
+    padding: 10px 30px 0 0;
 }
 
+.music-review {
+    position: relative;
+    font-style: italic;
+    line-height: 1.8;
+    padding: 2.5em;
+    margin: 10% auto 0;
+}
+
+.music-review span {
+    color: orange;
+}
+
+.music-review .author {
+    font-style: normal;
+    color: inherit;
+    display: block;
+    position: absolute;
+    bottom: -10px;
+    right: 3em;
+}
+
+/* CONTACT SECTION */
+
 .contact {
-    margin: 0 5rem 100px;
+    position: relative;
+    margin: 0 auto;
 }
 
 .contact-title {
     color: orange;
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: center;
     margin-bottom: 50px;
 }
 
 .contact-text {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     text-align: center;
     line-height: 40px;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .contact-text img {
@@ -439,18 +456,20 @@ section img {
 .contact-text-socials {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 2em;
+    margin-bottom: 100px;
 }
 
 .contact-text-socials a {
     display: block;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 
 .contact-text-socials a:last-child {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 
 .contact-text-socials a img {
@@ -458,58 +477,519 @@ section img {
     width: 100%;
 }
 .credits {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     text-align: center;
 }
 
-@media only screen and (max-width: 360px) {
 
-    section {
-        background-image: none;
+
+/* GALLERY */
+
+#gallery {
+    
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3em;
+    justify-content: space-evenly;
+    margin-top: 60px;
+}
+
+.gallery-container {
+    max-width:75%;
+    aspect-ratio : 1 / 1;
+    border-radius: 2px;
+    overflow: hidden;
+}
+
+.gallery-container img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery-container img:hover {
+    transform: scale(1.1);
+    transition: transform 1s ease-out;
+}
+
+@media only screen and (min-width: 380px) {
+
+    .events-none-text {
+        font-size: 1rem;
     }
+}
 
+@media only screen and (min-width: 480px) {
 
-    .stars {
-        height: 500px;
-    }
-
-    .venus {
-        transform: translateY(-50px);
-    }
-
-    .mountain {
-        transform: translateY(-60px);
-    }
-
-    .road {
-        transform: translateY(-40px);
-    }
-
-    .lod {
-        height: 300px;
+    #boat {
         width: 200px;
-    }
-
-    #text {
-        font-size: 3.5rem;
-        transform: translateY(-40px);
-    }
-
-    .navMenu {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        margin: 100px 0 0 0;
+        height: 400px;
     }
 
     .navMenu a {
-        font-size: 1rem;
-        text-align: center;
+        font-size: 2rem;
     }
 
+    .events-buttons p {
+        font-size: 1.4rem;
+    }
 
+    .music-popup {
+        width: 70vw;
+        max-height: 90vh;
+        margin: 5vh auto;
+    }
 
-    .navMenu .dot {
+    .events-popup {
+        max-height: fit-content;
+        margin: 5vh auto;
+        width: 80vw;
+    }
+
+    .music-popup, .events-popup {
+        border: 1px solid rgb(56, 56, 56);
+    }
+
+    .events-none {
+        height: 65vh;
+        padding: 0 3em;
+    }
+
+    .events-none-text {
+        top: 70%;
+    }
+
+    .about {
+        margin: 20% 0 10%;
+    }
+
+    .music-slide-player_title {
+        font-size: 1.1rem;
+    }
+
+    .contact-title {
+        font-size: 2.5rem;
+    }
+}
+
+@media only screen and (min-width: 593px) {
+
+    .navMenu a {
+        font-size: 2.6rem;
+    }
+
+    .events-popup, .music-popup {
+        max-height: 90vh;
+        width: 60vw;
+        margin: 5vh auto;
+    }
+
+    .about-box-text, .music-review {
+        font-size: 1.1rem;
+    }
+
+    .events-popup {
+        width: 75vw;
+    }
+
+    .music-popup {
+        width: 80vw;
+    }
+
+    .music-popup img {
+        object-fit: contain;
+        width: 40%;
+    }
+
+    .info-img {
+        width: 30px;
+    }
+
+    #gallery {
+        padding: 2em;
+    }
+
+    .gallery-container {
+        width: 40%;
+    }
+
+    .contact-title {
+        font-size: 2.7rem;
+    }
+}
+
+@media only screen and (min-width: 700px) {
+
+    #boat {
+        width: 250px;
+        height: 450px;
+    }
+
+    .about {
+        margin: 150px 0;
+    }
+
+    .about-box-text, .music-review {
+        font-size: 1.2rem;
+    }
+
+    .music-popup {
+        width: 70vw;
+    }
+
+    .music-review .author {
+        bottom: 10px;
+        right: 4.5rem;
+    }
+
+    .contact-title {
+        font-size: 3rem;
+    }
+
+    .contact-text {
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (min-width: 750px) {
+
+    .about-box {
+        position: absolute;
+        bottom: 30px;
+        right: 15%;
+        background-color: rgba(17, 17, 17, 0.847);
+        width: 80%;
+        padding: 2em 3em;
+        border-left: 10px solid black;
+    }
+
+    .events-buttons p {
+        font-size: 1.5rem;
+    }
+
+    .events-none-text {
+        font-size: 1.2rem;
+    }
+
+    .music {
+        margin-bottom: 100px;
+    }
+
+    .music-review {
+        padding: 3.5em;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+
+    #boat {
+        width: 300px;
+        height: 500px;
+    }
+
+    #text {
+        font-size: 10rem;
+    }
+
+    .navDiv {
+        position: relative;
+    }
+    
+    .navMenu-icon {
         display: none;
+    }
+    
+    .navMenu {
+        display: flex;
+        justify-content: center;
+        gap: 2em;
+        padding: 50px 0;
+    }
+    
+    .navMenu a {
+        font-size: 1.5rem;
+        display: block;
+    }
+
+    .navMenu a:hover, .navMenu a:active {
+        color: #FFA500;
+    }
+    
+ 
+    
+    .events-buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 30px;
+        width: 100%;
+    }
+    
+    .events-buttons p:hover {
+        color: orange;
+    }
+    
+    .events-none-text, .events-info {
+        font-size: 1.2rem;
+    }
+    
+    .about {
+        margin: 100px 5rem 150px;
+    }
+    
+    .about-photo {
+        width: 85%;
+    }
+
+    .about-box {
+        bottom: 30px;
+        right: 0;
+    }
+
+    .music {
+        margin-bottom: 150px;
+    }
+    
+    .info-img {
+        width: 30px;
+        height: auto;
+        margin: 0 20px 20px auto;
+    }
+    
+    .music-popup {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin: 5vh auto 0;
+        padding: 60px 0;
+        background: #090909;
+        border-radius: 3px;
+        width: 60%;
+        height: 90vh;
+    }
+    
+    .events-popup {
+        width: 60vw;
+    }
+
+    .music-popup {
+        width: 70vw;
+    }
+    
+    
+    .music-popup p {
+        flex: 0 0 100%;
+        font-size: 1rem;
+    }
+    
+    .music-popup img {
+        width: 40%;
+    }
+
+    .music-popup ol {
+        flex: 0 0 30%;
+    }
+    
+    
+    .music-popup ol li {
+        font-size: 1rem;
+    }
+
+    .music-slide {
+        display: flex;
+    }
+
+    .music-slide-img {
+        width: 40%;
+    }
+    
+    .music-slide-player {
+        flex-direction: row;
+        padding: 10px 30px;
+    }
+    
+    .music-slide-player_title {
+        font-size: 1rem;
+        margin-bottom: 0;
+    }
+
+    .music-slide-player_buttons {
+        order: 1;
+    }
+    
+    .music-slide-player_timebar {
+        align-items: center;
+        order: 2;
+    }
+    
+    .music-slide-player_title {
+        order: 3;
+        margin-left: 10px;
+    }
+    
+    .music-slide-player div {
+        display: flex;
+        justify-content: space-around;
+        gap: 20px;
+    }
+    
+    #music-album_name {
+        text-align: right;
+        padding: 15px 30px 0 0;
+    }
+    
+    .music-review {
+        position: relative;
+        font-style: italic;
+        line-height: 1.8;
+        padding: 0;
+        margin: 120px 8rem 0;
+    }
+    
+    .music-review span {
+        color: orange;
+    }
+    
+    .music-review .author {
+        bottom: -60px;
+        right: 40px;
+    }
+    
+    .contact {
+        position: relative;
+        margin: 0 5rem;
+    }
+    
+    
+    
+    .contact-title {
+        color: orange;
+        font-size: 3rem;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    
+    .contact-text {
+        font-size: 1.3rem;
+        text-align: center;
+        line-height: 40px;
+        margin-bottom: 80px;
+    }
+    
+    .contact-text img {
+        width: 30px;
+    }
+    
+    .contact-text-socials {
+        display: flex;
+        justify-content: center;
+        gap: 2em;
+        margin-bottom: 100px;
+    }
+    
+    .contact-text-socials a {
+        display: block;
+        width: 30px;
+        height: 30px;
+    }
+    
+    .contact-text-socials a:last-child {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .contact-text-socials a img {
+        display: block;
+        width: 100%;
+    }
+    .credits {
+        margin-bottom: 30px;
+        text-align: center;
+    }
+    
+    
+    
+    /* GALLERY */
+    
+    #gallery {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 3em;
+        justify-content: space-evenly;
+        padding: 2em;
+    }
+    
+    .gallery-container {
+        width: 200px;
+        height: 200px;
+        border-radius: 2px;
+        overflow: hidden;
+    }
+    
+    .gallery-container img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .gallery-container img:hover {
+        transform: scale(1.1);
+        transition: transform 1s ease-out;
+    }
+}
+
+@media only screen and (min-width:1200px) {
+
+    .navMenu a {
+        font-size: 1.7rem;
+    }
+
+    .about {
+        margin: 100px 8rem 150px;
+    }
+
+    .about-photo {
+        width: 80%;
+    }
+
+    .about-box {
+        width: 70%;
+        bottom: 50px;
+        right: 0;
+    }
+
+    .events-popup {
+        width: 50vw;
+    }
+
+    .music-popup {
+        width: 50vw;
+    }
+
+    .music-popup img {
+        width: 35%;
+    }
+}
+
+@media only screen and (min-width:1430px) {
+
+    .about-photo {
+        width: 75%;
+    }
+
+    .about-box {
+        width: 55%;
+        bottom: 90px;
+        right: 0;
+    }
+
+    .events-popup {
+        width: 40vw;
+    }
+
+    .music-popup {
+        width: 50vw;
     }
 }
